deployment-k8s.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: steedos-com
  labels:
    the-namespace-name: steedos-com
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: steedos-com
  name: steedos-com
  namespace: steedos-com
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: steedos-com
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.service: steedos-com
    spec:
      # imagePullSecrets:
      #   - name: steedos-account
      containers:
        - image: steedos/steedos.com:latest
          imagePullPolicy: Always
          name: steedos-com
          command: ["/bin/sh", "-c", " echo $(date +%T) && yarn start"]
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: "4"
              memory: "4Gi"
              ephemeral-storage: 800Mi #定义存储的限制为800M
            requests:
              cpu: "500m"
              memory: "1Gi"
              ephemeral-storage: 800Mi
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: steedos-com
  name: steedos-com-svc
  namespace: steedos-com
spec:
  ports:
    - name: http-5000
      port: 5000
      protocol: TCP
      targetPort: 3000
  selector:
    io.kompose.service: steedos-com
  type: ClusterIP

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "1000M"
  name: steedos-com-ingress
  namespace: steedos-com
spec:
  rules:
    - host: www.steedos.cn
      http:
        paths:
          - backend:
              serviceName: steedos-com-svc
              servicePort: 5000
            path: /
  tls:
    - hosts:
        - www.steedos.cn
      secretName: steedos-http-tls-secret
